@@ -15,3 +15,4 @@ debian/icons/odf6ods-20x22.png
 debian/icons/odf6odp-20x22.png
 debian/icons/odf6otp-20x22.png
 debian/icons/odf6oth-20x22.png
+debian/icons/openlogo-75.png
